@@ -71,6 +71,7 @@ from ExecuteApplicationTest import ExecuteApplicationTest
 from CompoundPathFilterTest import CompoundPathFilterTest
 from LazyModuleTest import LazyModuleTest
 from CapturingSlot import CapturingSlot
+from DictPathTest import DictPathTest
 
 if __name__ == "__main__":
 	import unittest
